added POSTGRES Credentials to example file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-JUMPHOST_IP="2.2.2.15"
-JUMPHOST_PORT=22
-JUMPHOST_USER=admin
-JUMPHOST_PASS=password
+JUMPSERVER_IP="2.2.2.15"
+JUMPSERVER_PORT=22
+JUMPSERVER_USER=admin
+JUMPSERVER_PASS=password
+POSTGRES_HOST="192.168.0.1"
+POSTGRES_PORT=245
+POSTGRES_DB=mydb
+POSTGRES_USER=admin
+POSTGRES_PASS=password
