updated .env.examples added intruduction

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
+#values regarding the jumpserver:
+#IP, PORT and USER values must be set!
+#depending on the usage you can set either:
+#   -PASS and KEYFILE: the keyfile is used, the pass is interpreted as the passphrase
+#   -only KEYFILE: the keyfile is used
+#   -only PASS: the password is used as is regular credentials
 JUMPSERVER_IP="2.2.2.15"
 JUMPSERVER_PORT=22
 JUMPSERVER_USER=admin
 JUMPSERVER_PASS=password
+SSH_KEYFILE='my/sample/path'
+
+#all database values must be set!
 POSTGRES_HOST="192.168.0.1"
 POSTGRES_PORT=245
 POSTGRES_DB=mydb
 POSTGRES_USER=admin
 POSTGRES_PASS=password
-SSH_KEYFILE='my/sample/path'
