--- a/src/ssh-manager-schedule.timer.example
+++ b/src/ssh-manager-schedule.timer.example
@@ -1,14 +1,16 @@
 [Unit]
 Description=Schedule the ssh-manager service
-RefuseManualStart=no    # allow manual start
-RefuseManualStop=no     # allow manual stop
+# allow manual start
+RefuseManualStart=no
+# allow manual stop
+RefuseManualStop=no
 
 [Timer]
 # if the job missed a run due it being off, the job runs afterwards 
 Persistent=True
 # 300 seconds after boot the job runs for the first time
 OnBootSec=300
-#twice a day -> 05:00:00 & 19:00:00
+#twice a day -> 05:00:00 & 19:00:00 can be changed to custom times
 OnCalendar=*-*-* 05,19:00:00
 #declairs which job to execute
 Unit=ssh-manager.service
