--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ POSTGRES_PORT=245
 POSTGRES_DB=mydb
 POSTGRES_USER=admin
 POSTGRES_PASS=password
+
+#paths are configured by running 'setup.sh'
+CONFIGPATH="/thats/where/i/store/my/configs"
+MAINPATH="/the/path/to/main.py"
