--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 #values regarding the jumpserver:
 #IP, PORT and USER values must be set!
 #depending on the usage you can set either:
-#   -PASS and KEYFILE: the keyfile is used, the pass is interpreted as the passphrase
+#   -PASS and KEYFILE: keyfile is used with passphrase
 #   -only KEYFILE: the keyfile is used
 #   -only PASS: the password is used as is regular credentials
 JUMPSERVER_IP="2.2.2.15"
